Bug 196465 - Missing reset button for curve in monochrome conversion tool
Summary: Missing reset button for curve in monochrome conversion tool
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Editor-BlackWhite (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-14 13:06 UTC by Gandalf Lechner
Modified: 2022-01-14 21:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gandalf Lechner 2009-06-14 13:06:02 UTC
Version:           1.0.0-beta2 (rev.: 981747M) (using 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.28-13-generic

In the monochrom conversion tool, there is no reset button for flipping the curve in the last tab back to a straight line. The user can reset the contrast slider or reset all settings, but a simple reset for the curve would also be helpful.
Comment 1 caulier.gilles 2009-06-14 13:10:50 UTC
Andi, it very easy to implement. Interested ?

Gilles Caulier
Comment 2 Andi Clemens 2009-06-14 13:23:44 UTC
Yeah why not...

Andi
Comment 3 Andi Clemens 2009-06-14 14:02:09 UTC
SVN commit 981792 by aclemens:

Add reset button to the curves widget in BWSepia tool.
This could be factorized, right now it is just a copy & paste.
Maybe we should think of this when planning new editor interface.

BUG:196465

 M  +81 -2     bwsepiatool.cpp  
 M  +19 -0     bwsepiatool.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=981792
Comment 4 Gandalf Lechner 2009-06-14 14:14:09 UTC
That was quick - thanks a lot!