Add reset button to the curves widget in BWSepia tool. This could be factorized, right now it is just a copy & paste. Maybe we should think of this when planning new editor interface.

BUG:196465

svn path=/trunk/extragear/graphics/digikam/; revision=981792